@startuml
'https://plantuml.com/class-diagram

class App {
main()
start()
}

enum View{
View.LIST
View.HELP
}

class ViewSwitcher{
setScene()
switchTo(View view)
}

class ListOperations {
onlyCompleted()
onlyIncomplete()
}

class ListController {
initialize()
AddItemClicked()
RemoveClicked()
CompleteClicked
SaveClicked()
CompleteOn()
IncompleteOn()
DeleteAll()
LoadListClicked()
OverwriteClicked()
HelpButtonClicked()
}

class Item {
boolean isComplete
String description
LocalDate dueDate
Constructor()
Getters()
Setters()
}


class FileOperations {
serializeList()
deserializeList()
}

class HelpController{
BackClicked()
}

javafx.Application <|-- App
App <-- ListController

HelpController -> ListController
HelpController <- ListController
ListController <--  ListOperations
ListController <-- Item
Item -> ListOperations
ListController <-- FileOperations
ListController <- ViewSwitcher
View --> ViewSwitcher



@enduml